# sleeper

./: CMakeLists.txt  README.md
resources/: resources.qrc
resources/icons/: icon_mac.icns
src/: CMakeLists.txt  main.cpp
src/app/: application.cpp  application.h  types.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: misc.cpp  misc.h
